Renamed a DTO class