@@ -1,7 +1,7 @@
 package ro.occam.wsbridge.controllers.cxf;
 
 import org.springframework.stereotype.Service;
-import ro.occam.wsbridge.dtos.JobAd;
+import ro.occam.wsbridge.dtos.JobAdDto;
 
 import javax.ws.rs.GET;
 import javax.ws.rs.Path;
@@ -9,6 +9,7 @@ import javax.ws.rs.Produces;
 import javax.ws.rs.core.MediaType;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 @Path("/jobs")
 @Service
@@ -17,8 +18,8 @@ public class JobAdsController {
     @GET
     @Path("/")
     @Produces(MediaType.APPLICATION_JSON)
-    public Collection<JobAd> getAllJobs() {
-        return Arrays.asList(JobAd.builder()
+    public Collection<JobAdDto> getAllJobs() {
+        return List.of(JobAdDto.builder()
                 .title("Senior developer wanted")
                 .description("Looking for a senior developer who can write a bridge " +
                         "to integrate Spring MVC and Apache CXF frameworks")
